<resources>
    <string name="to_sg_with_love">To the people of Singapore, with love</string>
    <string name="top_to_open">Tap letter to open</string>
    <string name="dear_singapore">Dear people of Singapore,</string>
    <string name="onboard_desc_1">We\&apos;ve had a tough year, with many sacrifices as we fight the virus. In the next phase of our fight, we want to help one another live life normally, as safely as we can.</string>
    <string name="onboard_desc_2">You can make it safer. By using TraceTogether and helping others set it up, you\&apos;re containing the virus and protecting your loved ones.</string>
    <string name="onboard_desc_3">A safe new normal starts with all of us, here.</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="tracetogether_fancy"><![CDATA[<font color="#F06566">Trace</font><font color="#C93E3C">Together</font>]]></string>
    <string name="help_recall"><b>Helps you remember</b> where you went and who you were with in the past few weeks.</string>
    <string name="notifies_you"><b>Notifies you quickly</b> if you\&apos;ve been exposed to COVID-19, to protect you and your loved ones</string>
    <string name="how_it_works_2_text_title">Data used only when needed</string>
    <string name="how_it_works_2_text_content">Your Bluetooth proximity data is <b>stored securely on your phone.</b> If you test positive for COVID-19, the Ministry of Health (MOH) will approach you to upload the data, for the purpose of contact tracing*.</string>
    <string name="how_it_works_2_text_content_2">Data stored on your phone for longer than 25 days is automatically deleted.</string>
    <string name="how_it_works_2_text_content_3">Data can only be used for the purpose of contact tracing. The only exception is when the data is needed to investigate serious offences. If contact tracing data from your device is needed by a law enforcement agency, you’ll be informed and guided on how to upload the data. See our Privacy Policy for details.</string>
    <string name="privacy_safeguards">Privacy Policy</string>
    <string name="serious_offences">serious offences</string>
    <string name="acknowledge">Acknowledgements 🥰</string>
    <string name="lets_go">Let\&apos;s go</string>
    <string name="enter_your_number">Enter your mobile number</string>
    <string name="moh_use_number">MOH will use this number to contact you if you had possible exposure to COVID-19.</string>
    <string name="get_otp">Get OTP</string>
    <string name="verify_your_mobile_number">Verify your mobile number</string>
    <string name="otp_sent">Enter the one-time pin (OTP) sent to %s.</string>
    <string name="wrong_number"><u>Wrong Number?</u></string>
    <string name="resend">Resend</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="invalid_otp">Wrong OTP entered</string>
    <string name="oversea_number_disclaimer_text">Note: This app is only intended for use in Singapore. Some overseas networks and phone numbers may not receive one-time pin (OTP) for verification. In such cases, please set up your app in Singapore, using a local SIM card.</string>
    <string name="select_your_profile">Select your profile</string>
    <string name="profile_nric">Singaporean/PR (all ages)</string>
    <string name="profile_fin_work">FIN — Work Pass</string>
    <string name="profile_fin_dependent">FIN — Dependent\&apos;s Pass</string>
    <string name="profile_fin_student">FIN — Student\&apos;s Pass</string>
    <string name="profile_fin_ltvp">FIN — LTVP</string>
    <string name="profile_visitor">I\'m Visiting Singapore</string>
    <string name="proceed">Proceed</string>
    <string name="otp_auto_filled">Your OTP was auto filled</string>
    <string name="close_uppercase">CLOSE</string>
    <string name="why_need_detail">Why do you need my details?</string>
    <string name="why_need_detail_desc">Your unique identification number allows MOH to <b>reach the right person</b> when they need to give you important health advice about COVID-19.</string>
    <string name="i_see_got_it">I see. Got it! :)</string>
    <string name="have_nric_ready">Please have your NRIC or Birth Cert No. ready :)</string>
    <string name="nric_profile_title">Your NRIC details</string>
    <string name="wp_profile_title">Your FIN-WP details</string>
    <string name="dp_profile_title">Your FIN-DP details</string>
    <string name="stp_profile_title">Your FIN-STP details</string>
    <string name="ltvp_profile_title">Your FIN-LTVP details</string>
    <string name="passport_profile_title">Your Passport details</string>
    <string name="name">Name</string>
    <string name="nric_birth_cert_no_title">NRIC / Birth Cert No.</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_issue">Date of Issue</string>
    <string name="nric_date_of_issue">NRIC Date of Issue</string>
    <string name="fin_date_of_issue">FIN Date of Issue</string>
    <string name="dob_passport">Date of Birth (as per Passport)</string>
    <string name="date_of_issue_ddmmyyyy">Date of Issue (DD-MM-YYYY)</string>
    <string name="how_to_find"><u>How to find?</u></string>
    <string name="for_national_servicemen">For National Servicemen, please approach your Unit Chief Clerk for the Date of Issue stated at the back of your NRIC.</string>
    <string name="nric_below_17">NRIC Date of Issue is not required for people below 17 years old.</string>
    <string name="moh_use_info">The details that you provided are true. You agree to our Terms of Use, Privacy Statement, and for MOH to approach you to upload your Bluetooth data for the purpose of contact tracing.</string>
    <string name="terms_of_Use">Terms of Use</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="invalid_nric">Invalid NRIC</string>
    <string name="fin_entered_in_nric_error">Please tap back and select a FIN profile</string>
    <string name="validation_failed">Validation failed; check all fields in red</string>
    <string name="back_of_nric">At the <u>back</u> of your NRIC</string>
    <string name="have_work_pass_ready">Please have your Work Pass ready :)</string>
    <string name="have_dependent_pass_ready">Please have your Dependent\&apos;s Pass ready :)</string>
    <string name="fin_full_abbreviation">Foreign Identification Number (FIN)</string>
    <string name="card_serial_number">Card Serial Number</string>
    <string name="back_of_card"><u>Back</u></string>
    <string name="have_student_pass_ready">Please have your Student\&apos;s Pass ready :)</string>
    <string name="have_ltvp_ready">Please have your Long Term Visit Pass ready :)</string>
    <string name="ltvp">Long Term Visit Pass</string>
    <string name="invalid_fin">Invalid FIN</string>
    <string name="check_back_card">Check the <u>back</u> of your card for Date of Issue</string>
    <string name="or">Or</string>
    <string name="download_sgworkpass">Download SGWorkPass app and scan QR code for Date of Issue</string>
    <string name="use_passport_you_enter_SG_with">"Please use the Passport that you\'ll enter Singapore with :)"</string>
    <string name="nationality">Nationality</string>
    <string name="passport_number">Passport Number</string>
    <string name="location_permission">Location Permission</string>
    <string name="allow_while_using_app">Allow while using app</string>
    <string name="location_permission_adr11" translatable="false">%s - %s</string>
    <string name="allow">ALLOW</string>
    <string name="note_possible_exposure">To help you note possible exposure to COVID-19, your app needs these permissions</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="battery_optimiser_opt">Let app run in background</string>
    <string name="bluetooth_data_deleted">All app Bluetooth data after 25 days will be automatically deleted.</string>
    <string name="prominent_android_needs_location_permission">The app does not collect location data in the background. Location permission is required on Android, for the app to use Bluetooth.</string>
    <string name="prominent_bluetooth_data_deleted">Bluetooth data is encrypted and stored on your device. Data older than 25 days is automatically deleted from your device, and data is shared with MOH only when there’s action taken to upload it.</string>
    <string name="your_app_is_working_now">Your app is working now!</string>
    <string name="keep_your_app_open"><b>Keep your app open in the background,</b> and <b>keep Bluetooth on</b> until the outbreak ends.</string>
    <string name="hang_in_there">And hang in there! We can defeat COVID-19 together.</string>
    <string name="yes">Yes!!!</string>
    <string name="app_updated">Your app is updated!</string>
    <string name="app_works_in_background">App works in iOS background now — get your iOS friends onboard! And let them know to keep their app open in the background too ✌🏽</string>
    <string name="more_languages">More <b>languages</b> — বাংলা, ဗမာ, 中文, हिन्दी, Melayu, தமிழ், ไทย</string>
    <string name="start_setup">Start Set Up</string>
    <string name="change_language">Change Language</string>
    <string name="english" translatable="false">English</string>
    <string name="mandarin" translatable="false">中文</string>
    <string name="malay" translatable="false">Melayu</string>
    <string name="tamil" translatable="false">தமிழ்</string>
    <string name="bengali" translatable="false">বাংলা</string>
    <string name="hindi" translatable="false">हिन्दी</string>
    <string name="burmese" translatable="false">ဗမာ</string>
    <string name="thai" translatable="false">ไทย</string>
    <string name="english_code" translatable="false">en</string>
    <string name="mandarin_code" translatable="false">zh</string>
    <string name="malay_code" translatable="false">ms</string>
    <string name="tamil_code" translatable="false">ta</string>
    <string name="bengali_code" translatable="false">bn</string>
    <string name="hindi_code" translatable="false">hi</string>
    <string name="burmese_code" translatable="false">my</string>
    <string name="thai_code" translatable="false">th</string>
    <string name="title_home">Home</string>
    <string name="title_upload">Upload</string>
    <string name="title_more">More</string>
    <string name="paused_text">We will not be able to help you note possible exposure to COVID-19 during this period ☹</string>
    <string name="pause_tt_30m">Pause for 30 minutes</string>
    <string name="pause_tt_2h">Pause for 2 hours</string>
    <string name="pause_tt_8h">Pause for 8 hours</string>
    <string name="ok">OK</string>
    <string name="help">Help</string>
    <string name="title_history">History</string>
    <string name="passport_ica_error_title">Singapore’s immigration does not have your Passport details</string>
    <string name="passport_ica_error_message">You can only activate your app after clearing Singapore’s immigration. Also, check if you’ve entered the correct details into the app.</string>
    <string name="txt_verified_with_SG_immigration">Verified with Singapore\'s immigration</string>
    <string name="group_check_in_error_title">Oops! This venue does not allow Group check in.</string>
    <string name="group_check_in_error_message">Your family needs to check in with their own TraceTogether device. This ensures that all visitors have TraceTogether activated, to better protect you in crowded places.</string>
    <string name="group_check_in_ok_text">OK, CHECK IN FOR MYSELF</string>
</resources>