<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history"
        android:title="@string/title_history" />
    <!--
        <item
            android:id="@+id/navigation_activity"
            android:icon="@drawable/ic_activity_map"
            android:title="@string/title_activity_map" />
    -->

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/ic_upload"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/menu"
        android:title="@string/title_more" />

</menu>
