<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="32dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/checkBackCard"
            style="@style/OnboardingDescNoPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:text="@string/check_back_card"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_ltvp_card_w_red_line" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/OnboardingSubDesc"
            android:text="@string/date_of_issue_ddmmyyyy"
            android:textColor="@color/new_accent"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="24dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/or"
            android:textSize="16sp"
            android:textStyle="bold"
            app:textAllCaps="true"
            android:textColor="@color/grey_4"
            android:background="@color/unselected_accent"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/OnboardingDescNoPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingBottom="16dp"
            android:text="@string/download_sgworkpass"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/stp_qr" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
